hphp/hack/test/typecheck/disallow_unset_on_varray/disallow_unset_on_varray.php.like_types.exp
File "disallow_unset_on_varray.php", line 4, characters 3-15:
In strict mode, unset is banned except on dict-like array, darray, keyset, or dict indexing (Typing[4135])
File "disallow_unset_on_varray.php", line 3, characters 22-32:
This is a dynamic value or a varray because it is an unenforceable type
File "disallow_unset_on_varray.php", line 8, characters 3-15:
In strict mode, unset is banned except on dict-like array, darray, keyset, or dict indexing (Typing[4135])
File "disallow_unset_on_varray.php", line 7, characters 32-52:
This is a dynamic value or a varray_or_darray because it is an unenforceable type
File "disallow_unset_on_varray.php", line 12, characters 3-15:
In strict mode, unset is banned except on dict-like array, darray, keyset, or dict indexing (Typing[4135])
File "disallow_unset_on_varray.php", line 11, characters 25-34:
This is a dynamic value or an array (used like a vector) because it is an unenforceable type
File "disallow_unset_on_varray.php", line 16, characters 3-15:
In strict mode, unset is banned except on dict-like array, darray, keyset, or dict indexing (Typing[4135])
File "disallow_unset_on_varray.php", line 15, characters 25-39:
This is a dynamic value or an array (used like a hashtable) because it is an unenforceable type
File "disallow_unset_on_varray.php", line 20, characters 3-15:
In strict mode, unset is banned except on dict-like array, darray, keyset, or dict indexing (Typing[4135])
File "disallow_unset_on_varray.php", line 19, characters 22-37:
This is a darray or a dynamic value because it is an unenforceable type
